--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@prisma/client": "^6.4.1",
     "axios": "^1.8.1",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
+    "lucide-react": "^0.479.0",
     "next": "15.2.0",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
